Implemented PrimeArrowSkill